add the demo stuff

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,8 +2,21 @@
 
 @main("Welcome to Play Framework") {
 
+    <script data-main="@routes.Assets.at("main")" src="@routes.WebJarAssets.at(WebJarAssets.locate("require.js"))"></script>
+    
     <div class="well">
         <h1>@message</h1>
+    </div>
+
+
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">Modal header</h3>
+        </div>
+        <div class="modal-body">
+            <p>hello, world</p>
+        </div>
     </div>
 
 }
